- Fixed bug #50358 (Compile failure compiling ext/phar/util.lo)